--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "jsonwebtoken": "^8.5.1",
+    "lightgallery": "^2.1.8",
     "moment": "^2.29.1",
     "mongoose": "^5.12.7",
     "nodemailer": "^6.6.0",
